spacing fixes for the features pages

--- a/fedoraproject.org/static/css/fedora960.css
+++ b/fedoraproject.org/static/css/fedora960.css
@@ -573,6 +573,8 @@ h4.main-section-hl { font-size: small; }
   margin-right: 15px;
 }
 
+#features-content .row { margin-bottom: 2.5em; }
+
 #features-content #features-icons img {
   float: none;
   margin-right: 0;
